# server/swagger.json
@@ -183,18 +183,42 @@
           "required": true
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "Default Response",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "user": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "string"
+                        },
+                        "name": {
+                          "type": "string",
+                          "minLength": 3
+                        },
+                        "email": {
+                          "type": "string",
+                          "format": "email",
+                          "minLength": 1
+                        }
+                      },
+                      "required": [
+                        "id",
+                        "name",
+                        "email"
+                      ],
+                      "additionalProperties": false
+                    },
                     "accessToken": {
                       "type": "string"
                     }
                   },
                   "required": [
+                    "user",
                     "accessToken"
                   ],
                   "additionalProperties": false
